<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.cpp.awh.snowfall.AddStudentActivity">

    <LinearLayout
        android:padding="5dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/addStudentActivity_FirstName_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_student_first_name_edit_text" />
        <EditText
            android:id="@+id/addStudentActivity_LastName_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_student_last_name_edit_text" />

        <EditText
            android:id="@+id/addStudentActivity_TeacherName_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_student_teacher_name_edit_text" />

        <EditText
            android:id="@+id/addStudentActivity_ParentName_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_student_parent_name_edit_text" />

        <LinearLayout
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- Date of Birth Label -->
            <TextView
                android:id="@+id/add_student_DOB_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_student_DOB_TextView" />
            <!-- Date Picker -->
        </LinearLayout>

        <LinearLayout
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- Grade Level Label -->
            <TextView
                android:id="@+id/add_student_grade_level_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_student_grade_level_TextView" />
            <!-- Grade Level -->
        </LinearLayout>

        <EditText
            android:id="@+id/addStudentActivity_school_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_student_school_edit_text" />
        <Button
            android:id="@+id/addStudentActivity_add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_student_add_button"
            android:layout_gravity="end" />
    </LinearLayout>

</android.support.v7.widget.LinearLayoutCompat>
