<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.cpp.awh.easyabc.AddStudentActivity">

    <LinearLayout
        android:padding="5dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/addStudentFragment_FirstName_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/addStudentFragment_first_name_EditText" />
        <EditText
            android:id="@+id/addStudentFragment_LastName_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/addStudentFragment_last_name_EditText" />

        <EditText
            android:id="@+id/addStudentFragment_Teacher_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/addStudentFragment_teacher_EditText" />

        <EditText
            android:id="@+id/addStudentFragment_Parent_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/addStudentFragment_parent_EditText" />

        <LinearLayout
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- Date of Birth Label -->
            <TextView
                android:id="@+id/addStudentFragment_DOB_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addStudentFragment_DOB_TextView" />
            <!-- Date Picker -->
        </LinearLayout>

        <LinearLayout
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- Grade Level Label -->
            <TextView
                android:id="@+id/addStudentFragment_grade_level_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addStudentFragment_grade_level_TextView" />
            <!-- Grade Level -->
        </LinearLayout>

        <EditText
            android:id="@+id/addStudentFragment_School_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/addStudentFragment_school_EditText" />
        <Button
            android:id="@+id/addStudentFragment_add_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addStudentFragment_add_Button"
            android:layout_gravity="end" />
    </LinearLayout>

</android.support.v7.widget.LinearLayoutCompat>
