<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <EditText
        android:id="@+id/loginFragment_username_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/loginFragment_username_EditText"/>
    <EditText
        android:id="@+id/loginFragment_password_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/loginFragment_password_EditText"/>
    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/loginFragment_register_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginFragment_register_Button" />
        <Button
            android:id="@+id/loginFragment_login_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginFragment_login_Button" />
    </LinearLayout>
</LinearLayout>